--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^2.2.2",
+    "body-parser": "^1.20.2",
+    "express": "^4.19.2",
     "font-awesome": "^4.7.0",
+    "mongoose": "^8.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
