--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^2.2.2",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "font-awesome": "^4.7.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
